--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12562470.md#1" title="共和党赢26摇摆区 拿下民主党7个众议席""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/06/610f3273b196930084f3ed7f98e4c629-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562260.md#1" title="鲍威尔：我们即将证明川普获压倒性胜利""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8621-700x420-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/mytgei3586/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://mytgei3586.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564448.md#1">新泽西共和党主席呼吁州长墨菲谴责华府暴力</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564392.md#1">鲍威尔证实服务器在德被没收 CIA涉案成疑点</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564403.md#1">乔州路边惊现遭弃投票机 官方：在调查源头</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564185.md#1">Dominion陷舞弊指控 急撇清和古巴委国关系</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564005.md#1">【直播】川普就降低处方药价格发表讲话</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564360.md#1">美参议员斯科特病毒检测呈阳性 在家隔离</a><br>
+:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564457.md#1">欧盟将买美国疫苗 不许匈牙利买中俄疫苗</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564356.md#1">鲍威尔：川普团队将起诉更多摇摆州选举官员</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564448.md#1">新泽西共和党主席呼吁州长墨菲谴责华府暴力</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564392.md#1">鲍威尔证实服务器在德被没收 幕后疑云重重</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564403.md#1">乔州路边惊现遭弃投票机 官方：在调查源头</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564185.md#1">Dominion陷舞弊指控 急撇清和古巴委国关系</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
