--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -26,6 +26,6 @@
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12560254.md#1" target="_blank">【慧聊养生】最早疫苗源于中国</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12561618.md#1" target="_blank">治牙周病他糖尿病竟好转 医：都是慢性发炎惹祸</a><br></h3>
 <h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/19/n12562184.md#1" target="_blank">新冠疫苗就要来了 医生：3种人接种有风险</a><br></h3>
-<h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564183.md#1" target="_blank">5个动作 终结驼背软塌姿势 运动效果加倍</a><br></h3>
+<h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/20/11/20/n12564183.md#1" target="_blank">每天做5个动作 终结驼背软塌姿势 增肌效果加倍</a><br></h3>
 <tr><td><h3><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mytgei3586/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/mytgei3586/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
