--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -18,7 +18,7 @@
 <tr><td width="742"><h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12562150.md#1" target="_blank">【重磅】川普律师公布八大选举舞弊指控</a><br></h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12562150.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7VF-150x120.jpg" align ="left"></a>美国总统川普（特朗普）的竞选律师团队周四（11月19日）召开新闻发布会，介绍选举诉讼官司的最新进展，代表律师朱利安尼和鲍威尔向公众透露诉讼包括的八大指控。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 6:34 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561412.md#1" target="_blank">【一线采访】青岛滨海学院封校 学生：要疯了</a><br></h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561412.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229036964-150x120.jpg" align ="left"></a>山东青岛市的滨海学院自疫情以来一直封校，并且长年半军事化管理，宿舍定时开放，违规者扣分不能毕业等等。让学生们叫苦不迭，有学生表示，要疯了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 5:53 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560684.md#1" target="_blank">特鲁多谴责中共升级“强制外交”</a><br></h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560684.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/9G9A5057-150x120.jpg" align ="left"></a>加拿大总理和反对党近日纷纷对中共强硬外交、在加国境内恐吓、威胁加拿大人的行为表示谴责。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 2:48 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560779.md#1" target="_blank">【大选更新11·19】川普团队宣布更多舞弊证据</a><br></h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560779.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683370-150x120.jpg" align ="left"></a>随着川普（特朗普）竞选团队在多个摇摆州，提起选举舞弊诉讼，很多民众都想知道，川普团队的策略是什么，如何才能扳回局势。
+<tr><td width="742"><h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560779.md#1" target="_blank">【大选更新11·19】“费城舞弊案可装满图书馆”</a><br></h3><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560779.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683370-150x120.jpg" align ="left"></a>随着川普（特朗普）竞选团队在多个摇摆州，提起选举舞弊诉讼，很多民众都想知道，川普团队的策略是什么，如何才能扳回局势。
 
 美国知名律师艾伦?德肖维茨（Alan Dershowitz）认为，川普团队在宾州是根据《宪法》第二条起诉，涉及到数百万张选票。他认为，川普团队在这起案件中胜诉的可能性很大。
 
