--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562696.md#1" title="朱利安尼：民主党证人揭受训进行选举欺诈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7XP-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562694.md#1" title="亨特一伙勾结中共新证据：收中企600万美元""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/0925-west-Cover02-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://tatmqp396.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564773.md#1">再拿两奖 《归途》共获51项电影节奖</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564687.md#1">伊春政府欠千万工程款 承包人陷4年冤狱</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564539.md#1">上海一夫妇染疫 南汇中心医院进微博热搜前三</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564609.md#1">川普律师证实美军没收德国的Scytl服务器</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564658.md#1">沈舟：美太空军星链计划应对中共威胁</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564542.md#1">远程操控？证词显示密州投票机或连上互联网</a><br>
+:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564791.md#1">矢言放出“大海怪”鲍威尔律师何许人也？</a><br>
+:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564773.md#1">再拿两奖 《归途》共获51项电影节奖</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564687.md#1">伊春政府欠千万工程款 承包人陷4年冤狱</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564539.md#1">上海一夫妇染疫 南汇中心医院进微博热搜前三</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564609.md#1">川普律师证实美军没收德国的Scytl服务器</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564658.md#1">沈舟：美太空军星链计划应对中共威胁</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,908,548 人
+!共 367,909,455 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
