--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562696.md#1" title="朱利安尼：民主党证人揭受训进行选举欺诈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7XP-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562694.md#1" title="亨特一伙勾结中共新证据：收中企600万美元""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/0925-west-Cover02-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://tatmqp396.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564791.md#1">矢言放出“大海怪”鲍威尔律师何许人也？</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564773.md#1">再拿两奖 《归途》共获51项电影节奖</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564687.md#1">伊春政府欠千万工程款 承包人陷4年冤狱</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564539.md#1">上海一夫妇染疫 南汇中心医院进微博热搜前三</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564609.md#1">川普律师证实美军没收德国的Scytl服务器</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564658.md#1">沈舟：美太空军星链计划应对中共威胁</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564658.md#1">沈舟：美太空军星链计划应对中共威胁</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564688.md#1">【新闻看点】美国再独立战争？川习角力APEC</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564791.md#1">矢言放出“大海怪” 鲍威尔律师何许人也？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564773.md#1">再拿两奖 《归途》共获51项电影节奖</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564687.md#1">伊春政府欠千万工程款 承包人陷4年冤狱</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564539.md#1">上海一夫妇染疫 南汇中心医院进微博热搜前三</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
@@ -40,7 +40,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,909,455 人
+!共 367,911,106 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -56,6 +56,7 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12562274.md#1">钟原：习近平APEC视频讲话自相矛盾</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563188.md#1">河北一民政局长办公楼坠亡 生前徘徊多次</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564688.md#1">【新闻看点】美国再独立战争？川习角力APEC</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562329.md#1">阮民安筹拍新歌《手足》 坚持重现抗争画面</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12562189.md#1">【新闻看点】更多丑闻曝光 拜登总统美梦落空？</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561769.md#1">赵树海谈及家庭生活 赞高圆圆是标准儿媳</a><br>
@@ -103,7 +104,6 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/13/n12547437.md#1">【重播】美50州集会挺川普 吁停止窃选</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/14/n12548791.md#1">【拍案惊奇】白宫推定川普连任 起底计票系统</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/13/n12548068.md#1">【新闻看点】民主党舞弊现形？川普再令堵中共</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/14/n12548322.md#1">【横河观点】美国离中国式社会主义有多远</a><br>
 <br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/tatmqp396/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564687.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/58226345a22e718860b1d2b98b2d0073-320x200.png"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564687.md#1">伊春政府欠千万工程款 承包人陷4年冤狱</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563301.md#1">吉林警察半夜铁棍砸门 绑架法轮功学员孙亚珍</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561751.md#1">太原法轮功学员周韶山一家三口被非法判刑</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560099.md#1">他20亿身家遭官员洗劫 今沦为乞丐（下）</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/18/n12558645.md#1">他20亿身家遭官员洗劫 今沦为乞丐（上）</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560757.md#1">银行账户遭当局冻结 邓聿文发声明“受够了”</a><br><br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564139.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-85253219-320x200.jpg"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564139.md#1">华晨集团宣布破产重整 证监会立案调查</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562691.md#1">YY刚被百度收购 欢聚集团被浑水做空股价大跌</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12562304.md#1">债券违约增加 大陆多家中介机构被调查</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/18/n12558949.md#1">中共吹捧RCEP 前WTO官员：贸易自由化程度低</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/18/n12559129.md#1">泄导弹机密给中共 雷神华裔工程师被判刑</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/18/n12558272.md#1">蛋壳公寓破碎！？ 租客被撵 还得付“租金贷”</a><br><br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564334.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2015/12/1511052152312504.jpg"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564334.md#1">易富贤：中国诸多政策基于错误人口数据</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564217.md#1">亚太峰会召开 川普习近平视频出席引关注</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564148.md#1">美加大对太平洋岛国援助 制衡中共影响力</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564171.md#1">晚景堪虑 中国养老金缺口上看43兆元</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564090.md#1">美台经济对话登场 聚焦供应链合作等议题</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563888.md#1">中共四省委书记同时换人</a><br><br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564311.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564311.md#1">吴京恐不能再拍动作戏 关节烂到软骨像杂草</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563148.md#1">大陆多地新增确诊病例 纷纷出台限制令</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562803.md#1">暴雪侵袭 牡丹江机场临时关闭 多机场取消航班</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562673.md#1">河南信阳送葬人发生车祸 至少9死4伤</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561073.md#1">山东泰安车祸致4死2伤 死者有一人是副局长</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561562.md#1">暴雪袭内蒙、东北 列车停运高速关闭</a><br><br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561508.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/11/d40287--320x200.jpg"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561508.md#1">广西灵山《武则天她妈在钦州》工作组挨轰</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560385.md#1">江歌母起诉刘鑫理由曝光 刘鑫回应惹怒网民</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560836.md#1">贵州女老师人行道上骑车 被迫电视道歉引质疑</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560197.md#1">山东“辱母杀人案”当事人于欢出狱</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12559846.md#1">三退声明精选（2020/11/18）</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/18/n12559117.md#1">中共公安部力推电影 “天下无拐”突遭撤档</a><br><br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/17/n12554817.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/17/n12554817.md#1">中共抗日剧下架 网络负评如潮：严重不符史实</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/13/n12545730.md#1">隐瞒参与千人计划 美免疫学华裔专家认罪</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/12/n12543432.md#1">中共规定研究生导师“十不得” 舆论热议</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/11/n12540637.md#1">张家口一幼儿园疑用变质食物 官方说法不一</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/10/n12537787.md#1">传清华助理教授抛妻弃女 自称被家暴遭妻质问</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/4/n12524269.md#1">福建商学院副教授猥亵大一女生 女生反遭转学</a><br><br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/12/n12545208.md#1">【特稿】正邪相争 大选分左右 人民选未来</a><br>
@@ -112,10 +112,10 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/10/22/n12493565.md#1">【独家】1年抗议逾百起 湛江防民如防川</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/10/24/n12498279.md#1">揭秘：拜登家族与爆料人关系是如何破裂的</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/9/24/n12426629.md#1">【独家】揭秘打压“诉江潮”的中共帮凶</a><br>
-<br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a><br>
+<br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/10/27/n12504604.md#1">【命理】善恶一念之转 命运随之转</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/10/22/n12495148.md#1">德与财的故事：曾国藩和林则徐的选择</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/16/n12554038.md#1">【魏晋选举】之二：士族辉煌 耀亮门第</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/6/n12531008.md#1">【成吉思汗】占领中都 夺取金国半壁河山</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/13/n12546366.md#1">淫乱 冤死人转生做牛 名字记号铁证现牛身</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/17/n12556647.md#1">擅长针灸与诊脉 令朝野叹服的东汉名医郭玉</a><br>
 <br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/tatmqp396/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tatmqp396/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/tatmqp396/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
