--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -2,7 +2,7 @@
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564524.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8621-700x420-320x200.jpg"><p align="center">鲍威尔：未来两周内 将选举舞弊证据呈堂</p></a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564524.md#1" title="鲍威尔：未来两周内 将选举舞弊证据呈堂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8621-700x420-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563529.md#1" title="迫害法轮功 广东670人厄运 公安系统居多（3）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/AFP-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563284.md#1" title="【大选更新11·20】林伍德：乔州或销毁舞弊证据""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563284.md#1" title="【大选更新11·20】林伍德：坚守对自由的承诺""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/16/n12552112.md#1" title="【独家】在海外为中共牵线的关键人物""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/0Y1A6747-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564010.md#1" title="乔治亚重计票不比对签名 川普团队拒承认结果""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229674346-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563699.md#1" title="【新闻大家谈】舞弊八大证据和服务器疑云""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-37-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562696.md#1" title="朱利安尼：民主党证人揭受训进行选举欺诈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7XP-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562694.md#1" title="亨特一伙勾结中共新证据：收中企600万美元""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/0925-west-Cover02-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://tatmqp396.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564888.md#1">宾州众院决议由无党派委员会审计2020选举</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564658.md#1">沈舟：美太空军星链计划应对中共威胁</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564688.md#1">【新闻看点】美国再独立战争？川习角力APEC</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564791.md#1">矢言放出“大海怪” 鲍威尔律师何许人也？</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564773.md#1">再拿两奖 《归途》共获51项电影节奖</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564687.md#1">伊春政府欠千万工程款 承包人陷4年冤狱</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564978.md#1">乔治亚州大选依然诡异不断</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564940.md#1">亚特兰大响应“停止窃选”“Stop the Steal”抗议集会</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564787.md#1">数学教授分析：宾州高达10万选票令人质疑</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564902.md#1">疫情复燃阻碍复苏 美下季经济或再衰退</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564888.md#1">宾州众院决议由无党派委员会审计2020选举</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564658.md#1">沈舟：美太空军星链计划应对中共威胁</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,911,325 人
+!共 367,912,030 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
