--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tatmqp396/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/tatmqp396/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564524.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8621-700x420-320x200.jpg"><p align="center">鲍威尔：未来两周内 将选举舞弊证据呈堂</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564609.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/11/470018-320x200.jpg"><p align="center">川普律师证实美军没收德国的Scytl服务器</p></a>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564609.md#1" title="川普律师证实美军没收德国的Scytl服务器""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/470018-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564524.md#1" title="鲍威尔：未来两周内 将选举舞弊证据呈堂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8621-700x420-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563529.md#1" title="迫害法轮功 广东670人厄运 公安系统居多（3）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/AFP-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563284.md#1" title="【大选更新11·20】林伍德：坚守对自由的承诺""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-320x200.jpg">&nbsp;</a>
@@ -11,23 +12,22 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563545.md#1" title="民营企业家李怀庆遭重判20年 舆论反弹""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Em9HLHVWEAASp5e-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563059.md#1" title="彭斯：防疫计划已到位 无需全国封锁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1286584671-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562696.md#1" title="朱利安尼：民主党证人揭受训进行选举欺诈""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8VH7XP-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562694.md#1" title="亨特一伙勾结中共新证据：收中企600万美元""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/0925-west-Cover02-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://tatmqp396.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564900.md#1">麦肯娜尼：为了“宪法程序” 川普不应让步</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564893.md#1">美威斯康星州商场爆枪案 8人伤 枪手在逃</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564978.md#1">乔治亚州大选依然诡异不断</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564940.md#1">亚特兰大响应“停止窃选”“Stop the Steal”抗议集会</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564787.md#1">数学教授分析：宾州高达10万选票令人质疑</a><br>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564902.md#1">疫情复燃阻碍复苏 美下季经济或再衰退</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12565004.md#1">【翻墙必看】习拒绝与西方“脱钩”</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564900.md#1">麦肯娜尼：为了“宪法程序” 川普不应让步</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564893.md#1">美威斯康星州商场爆枪案 8人伤 枪手在逃</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564978.md#1">乔治亚州大选依然诡异不断</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564940.md#1">亚特兰大响应“停止窃选”“Stop the Steal”抗议集会</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564787.md#1">数学教授分析：宾州高达10万选票令人质疑</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563068.md#1">【翻墙必看】川普获压倒性胜利将获证实</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12562113.md#1">南京警方跨省拘吴景标和凉墨先生 网友吁关注</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563026.md#1">广州警方殴打外卖小哥 官方解释引网民炮轰</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12561355.md#1">拜登阵营丑闻：贿赂内华达原住民 花钱买票</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560109.md#1">陕西女大学生自杀身亡 遗书指遭系领导猥亵</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562646.md#1">天津本土病例急增 滨海新区全员检测</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12560058.md#1">【翻墙必看】乔治亚州重新计票的骗局</a><br>
 <br><p align="center"><a href="https://github.com/tatmqp396/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/19/n12562260.md#1">鲍威尔：我们即将证明川普获压倒性胜利</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 367,912,330 人
+!共 367,913,530 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -49,14 +49,14 @@
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564334.md#1">易富贤：中国诸多政策基于错误人口数据</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564524.md#1">鲍威尔：未来两周内 将选举舞弊证据呈堂</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564457.md#1">欧盟将买美国疫苗 不许匈牙利买中俄疫苗</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564542.md#1">远程操控？证词显示密州投票机或连上互联网</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/16/n12552112.md#1">【独家】在海外为中共牵线的关键人物</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564356.md#1">鲍威尔：川普团队将起诉更多摇摆州选举官员</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/17/n12556030.md#1">【独家】中共培训东南亚国家警官的背后</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564539.md#1">上海一夫妇染疫 南汇中心医院进微博热搜前三</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/16/n12552112.md#1">【独家】在海外为中共牵线的关键人物</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564787.md#1">数学教授分析：宾州高达10万选票令人质疑</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/17/n12556030.md#1">【独家】中共培训东南亚国家警官的背后</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562646.md#1">天津本土病例急增 滨海新区全员检测</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12563188.md#1">河北一民政局长办公楼坠亡 生前徘徊多次</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
-<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564236.md#1">中共鼓吹RECP 专家：玩花样 无实际价值</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12565004.md#1">【翻墙必看】习拒绝与西方“脱钩”</a><br>
+<a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/21/n12564905.md#1">钟原：李克强谈农民消费 再泄内循环窘境</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564688.md#1">【新闻看点】美国再独立战争？川习角力APEC</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12564311.md#1">吴京恐不能再拍动作戏 关节烂到软骨像杂草</a><br>
 <a href="https://github.com/tatmqp396/djy/blob/master/gb/20/11/20/n12562329.md#1">阮民安筹拍新歌《手足》 坚持重现抗争画面</a><br>
