--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12563699.md#1" title="【新闻大家谈】舞弊八大证据和服务器疑云""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/download-37-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/5/n12527927.md#1" title="【敦煌寻梦】丝绸之路上的明珠""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/F-11-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://yywlhi373.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565075.md#1">新研究找到消失在宇宙网中40%隐藏物质</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565250.md#1">证据显示邮寄选票造成广泛舞弊行为</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565007.md#1">台美经济对话机制化 将展开科技合作协定咨商</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565228.md#1">纽约新亚室内乐10周年 11/24线上募款音乐会</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565255.md#1">仅领先约300票 法官将决定纽约国会22选区胜者</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12564746.md#1">鲍威尔：四敌国介入过美国大选制表服务器</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565075.md#1">新研究找到消失在宇宙网中40%隐藏物质</a><br>
+:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565250.md#1">证据显示邮寄选票造成广泛舞弊行为</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565007.md#1">台美经济对话机制化 将展开科技合作协定咨商</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565228.md#1">纽约新亚室内乐10周年 11/24线上募款音乐会</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12565255.md#1">仅领先约300票 法官将决定纽约国会22选区胜者</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12564746.md#1">鲍威尔：四敌国介入过美国大选制表服务器</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12560222.md#1">中共喉舌发长文捧习 分析：个人崇拜再升级</a><br>
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
@@ -114,10 +114,10 @@
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/10/22/n12493565.md#1">【独家】1年抗议逾百起 湛江防民如防川</a><br>
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/10/24/n12498279.md#1">揭秘：拜登家族与爆料人关系是如何破裂的</a><br>
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/9/24/n12426629.md#1">【独家】揭秘打压“诉江潮”的中共帮凶</a><br>
-<br><p align="center"><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/10/27/n12504604.md#1">【命理】善恶一念之转 命运随之转</a><br>
+<br><p align="center"><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12564664.md#1">《狮子王》复仇记：王位之争即正邪大战</a><br>
+<a href="https://github.com/yywlhi373/djy/blob/master/gb/20/10/27/n12504604.md#1">【命理】善恶一念之转 命运随之转</a><br>
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a><br>
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/10/22/n12495148.md#1">德与财的故事：曾国藩和林则徐的选择</a><br>
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/16/n12554038.md#1">【魏晋选举】之二：士族辉煌 耀亮门第</a><br>
 <a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/6/n12531008.md#1">【成吉思汗】占领中都 夺取金国半壁河山</a><br>
-<a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/13/n12546366.md#1">淫乱 冤死人转生做牛 名字记号铁证现牛身</a><br>
 <br><p align="center"><a href="https://github.com/yywlhi373/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/yywlhi373/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yywlhi373/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yywlhi373/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/yywlhi373/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
